--- a/lib/Catalyst/Manual/Tutorial/Debugging.pod
+++ b/lib/Catalyst/Manual/Tutorial/Debugging.pod
@@ -233,15 +233,17 @@ prompt to view the built-in help screens.
 =head1 DEBUGGING MODULES FROM CPAN
 
 Although the techniques discussed above work well for code you are 
-writing, what if you want to use print/log/warn messages or set
-breakpoints in code that you have installed from CPAN (or in module
-that ship with Perl)?  One helpful approach is to place a copy of 
-the module inside the C<lib> directory of your Catalyst project.  
-When Catalyst loads, it will load from inside your C<lib> directory
-first, only turning to the global modules if a local copy cannot be
-found.  You can then make modifications such as adding a 
-C<$DB::single=1> to the local copy of the module without risking 
-the copy in the original location.
+writing, what if you want to use print/log/warn messages or set 
+breakpoints in code that you have installed from CPAN (or in module that 
+ship with Perl)?  One helpful approach is to place a copy of the module 
+inside the C<lib> directory of your Catalyst project.  When Catalyst 
+loads, it will load from inside your C<lib> directory first, only 
+turning to the global modules if a local copy cannot be found.  You can 
+then make modifications such as adding a C<$DB::single=1> to the local 
+copy of the module without risking the copy in the original location. 
+This can also be a great way to "locally override" bugs in modules while 
+you wait for a fix on CPAN.
+
 
 Matt Trout has suggested the following shortcut to create a local
 copy of an installed module:
@@ -294,7 +296,9 @@ Otherwise, it returns undef and nothing will be printed.
 
 Kennedy Clark, C<hkclark@gmail.com>
 
-Please report any errors, issues or suggestions to the author.
+Please report any errors, issues or suggestions to the author.  The
+most recent version of the Catalyst Tutorial can be found at
+L<http://dev.catalyst.perl.org/repos/Catalyst/trunk/Catalyst-Runtime/lib/Catalyst/Manual/Tutorial/>.
 
 Copyright 2006, Kennedy Clark, under Creative Commons License
 (L<http://creativecommons.org/licenses/by-nc-sa/2.5/>).
